# collaborate-app

./: Cargo.toml
crates/collaborate-room/: Cargo.toml  README.md
crates/collaborate-room/benches/: state_sync.rs
crates/collaborate-room/src/: apps.rs  lib.rs  room.rs  sync.rs  types.rs
crates/collaborate-room/src/apps/: document.rs
crates/core-domain/: Cargo.toml
crates/core-domain/src/: domain.rs  lib.rs
crates/core-domain/src/domain/room/: mod.rs  ports.rs  service.rs  types.rs
crates/core-domain/src/domain/workspace/: mod.rs
crates/core-domain/src/domain/workspace/entity/: membership.rs  mod.rs  user.rs  workspace.rs
crates/core-domain/src/domain/workspace/guards/: integration_guard.rs  mod.rs  super_admin_guard.rs  workspace_creator_guard.rs  workspace_member_guard.rs
crates/core-domain/src/domain/workspace/ports/: membership_repository.rs  mod.rs  secret_store.rs  user_repository.rs  workspace_repository.rs
crates/core-domain/src/domain/workspace/service/: mod.rs  sync_service.rs  workspace_service.rs
crates/core-domain/src/domain/workspace/types/: credentials.rs  errors.rs  ids.rs  membership.rs  mod.rs  permissions.rs  policy.rs  status.rs  sync.rs  user.rs
crates/omeet/: Cargo.toml
crates/omeet/src/: domain.rs  lib.rs  ports.rs
crates/syncable-state/: Cargo.toml  README.md
crates/syncable-state-derive/: Cargo.toml  README.md
crates/syncable-state-derive/src/: attrs.rs  diagnostics.rs  expand.rs  lib.rs  parse.rs  schema.rs  snapshot.rs  validate.rs
crates/syncable-state-derive/tests/: trybuild.rs
crates/syncable-state-derive/tests/ui/: container_fields_ok.rs  derive_ok.rs  duplicate_id.rs  duplicate_id.stderr  (+8 more)
crates/syncable-state/src/: change.rs  context.rs  error.rs  lib.rs  path.rs  schema.rs  snapshot.rs  traits.rs
crates/syncable-state/src/containers/: counter.rs  map.rs  mod.rs  string.rs  text.rs  vec.rs
crates/syncable-state/tests/: context_batches.rs  counter_container.rs  document_flow.rs  map_container.rs  runtime_apply.rs  string_container.rs  text_container.rs  vec_container.rs
docs/: implement_rule.md  implement_workspace_domain.md  summary_design.md  syncable-state-lib.md  system_spec.md
docs/research/: 2026-03-18-lorosurgeon-migration-report.md
docs/superpowers/plans/: 2026-03-17-state-node-id-refactor.md  2026-03-17-state-sync-benchmark.md  2026-03-17-state-sync-bootstrap-fix.md  2026-03-18-collaborate-room-readme-benchmark-report.md  2026-03-18-idle-poll-benchmark.md  2026-03-18-state-incremental-sync.md  2026-03-22-workspace-domain-skeleton.md  2026-03-23-console-workspace-admin-implementation.md  2026-03-23-syncable-state-library-implementation.md
docs/superpowers/specs/: 2026-03-17-state-sync-benchmark-design.md  2026-03-18-collaborate-room-readme-benchmark-report.md  2026-03-23-console-workspace-admin-design.md
frontends/collaborate-room/: index.html  package.json
frontends/console/: package.json  pnpm-lock.yaml  vite.config.ts
frontends/console/src/: App.tsx
frontends/omeet/: index.html  package.json
services/omeet-server/: Cargo.toml
services/realtime-server/: Cargo.toml
services/workspace-server/: Cargo.toml  debug_config.json
services/workspace-server/migration/: Cargo.toml
services/workspace-server/migration/src/: lib.rs  m20260323_000001_create_users.rs  m20260323_000002_create_auth_sessions.rs  m20260323_000003_create_workspaces.rs  m20260323_000004_create_workspace_memberships.rs  m20260323_000005_create_workspace_credentials.rs  m20260323_000006_create_workspace_credential_secret_versions.rs  m20260325_000001_add_signing_profile_to_workspaces.rs
services/workspace-server/src/: lib.rs  main.rs
services/workspace-server/src/app/: state.rs
services/workspace-server/src/auth/: actor.rs  extractor.rs  mod.rs  password.rs  session.rs
services/workspace-server/src/config/: cli.rs  mod.rs  settings.rs
services/workspace-server/src/http/: error.rs  mod.rs
services/workspace-server/src/http/dto/: auth.rs  credentials.rs  members.rs  mod.rs  sync.rs  users.rs  workspaces.rs
services/workspace-server/src/http/handlers/: auth.rs  credentials.rs  health.rs  members.rs  mod.rs  static_files.rs  sync.rs  users.rs  workspaces.rs
services/workspace-server/src/http/router/: mod.rs
services/workspace-server/src/persistence/: db.rs  mod.rs  seed.rs
services/workspace-server/src/persistence/entities/: auth_sessions.rs  mod.rs  users.rs  workspace_credential_secret_versions.rs  workspace_credentials.rs  workspace_memberships.rs  workspaces.rs
services/workspace-server/src/persistence/repositories/: auth_session_repository.rs  membership_repository.rs  mod.rs  secret_store.rs  user_repository.rs  workspace_repository.rs
services/workspace-server/src/static_assets/: mod.rs
(+19 files in other folders)
