[workspace]
members = ["services/*", "crates/*"]

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
tokio = { version = "1", default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

derive_more = "2.1"

automorph = "0.1"
automerge = "0.7"

thiserror = "2.0"
tracing = "0.1"
log = "0.4"
test-log = "0.2"
