[workspace]
members = ["services/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
collaborate-room = { path = "crates/collaborate-room" }
syncable-state = { path = "crates/syncable-state" }
syncable-state-derive = { path = "crates/syncable-state-derive" }

axum = { version = "0.8", default-features = false }
tokio = { version = "1", default-features = false }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

derive_more = "2.1"

automorph = "0.1"
automerge = "0.7"

thiserror = "2.0"
tracing = "0.1"
log = "0.4"
test-log = "0.2"
